protocols/tests/adders/adder_d1/expects/both_threads_fail.interp.add_d1.expect
error: The two expressions did not evaluate to the same value (in transaction `add_fork_early(1, 2, 5)`)
   ┌─ protocols/tests/adders/adder_d1/add_d1.prot:26:13
   │
26 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 5, RHS Value: 3

error: The two expressions did not evaluate to the same value (in transaction `add_fork_early(4, 5, 10)`)
   ┌─ protocols/tests/adders/adder_d1/add_d1.prot:26:13
   │
26 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 10, RHS Value: 9

Trace 0 execution failed.
---CODE---
101
